Changed absolute to relative path in fetch ref sr-bsc

--- a/code/retrieve_datasets/reference/config/fetch_sr-bsc.config
+++ b/code/retrieve_datasets/reference/config/fetch_sr-bsc.config
@@ -6,16 +6,16 @@ email=wwinnett@alaska.edu
 reset_indexes_everytime=1
 
 [STORAGE]  # Any information pertaining to the storage location
-storage_location=~/metagenome_replicates/Metagenome/data/reference/sr-bsc/storage/
+storage_location=../../../data/reference/sr-bsc/storage/
 
 [INDEX]  # Any information pertaining to the indexes location
-index_location=~/metagenome_replicates/Metagenome/data/reference/sr-bsc/indexes/
+index_location=../../../data/reference/sr-bsc/indexes/
 
 [OUTPUT]  # Any information pertaining to the output location
-output_location=~/metagenome_replicates/Metagenome/data/reference/sr-bsc/output/
+output_location=../../../data/reference/sr-bsc/output/
 
 [REPORTS]  # Any information pertaining to the report location
-reports_location=~/metagenome_replicates/Metagenome/data/reference/sr-bsc/reports/
+reports_location=../../../data/reference/sr-bsc/reports/
 
 [TOOLS]  # Any information pertaining to any tools used in this program
 # Location of FastTree. If on linux, you can use "which FastTree" for this - Windows use .exe location
